# test-github-actions

./: .gitignore  LICENSE  README.md
.github/actions/build-packages/: action.yml
.github/actions/cleanup-env/: action.yml
.github/actions/setup-env/: action.yml
.github/actions/test-package/: action.yml
.github/workflows/: build-pipeline.yml  main.yml  release-test.yml  release.yml
hello-app/: README.md  pyproject.toml
hello-app/hello/: args_parser.py  server.py
src/hello-app/: README.md
src/hello-app/hello/: app.py  app_consts.py  args_parser.py  server.py
src/pytest/: conftest.py  test_hello.py
src/pytest/test_server/: test_api.py
tests/test_cli/: test_parser.py
tests/test_server/: conftest.py
